# mlcourse-ai-workbook

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
scripts/: build_index.py
topic01-exploratory-data-analysis-pandas/: assignment.ipynb  assignment.py  notes.ipynb  notes.py
topic02-visual-data-analysis/: assignment.ipynb  assignment.py  notes-part1-visual-data-analysis.ipynb  notes-part1-visual-data-analysis.py  notes-part2-seaborn-matplotlib-plotly.ipynb  notes-part2-seaborn-matplotlib-plotly.py
topic03-classification-decision-trees-knn/: assignment.ipynb  assignment.py  notes.ipynb  notes.py
topic04-linear-classification-regression/: assignment.ipynb  assignment.py  notes-part1-mse-likelihood-bias-variance.ipynb  notes-part1-mse-likelihood-bias-variance.py  notes-part2-logit-likelihood-learning.ipynb  notes-part2-logit-likelihood-learning.py  notes-part3-regul-example.ipynb  notes-part3-regul-example.py  notes-part4-good-bad-logit-movie-reviews-xor.ipynb  notes-part4-good-bad-logit-movie-reviews-xor.py  notes-part5-valid-learning-curves.ipynb  notes-part5-valid-learning-curves.py
topic05-bagging-random-forest/: assignment.ipynb  assignment.py  notes-part1-bagging.ipynb  notes-part1-bagging.py  notes-part2-random-forest.ipynb  notes-part2-random-forest.py  notes-part3-feature-importance.ipynb  notes-part3-feature-importance.py
topic06-feature-engineering-selection/: assignment.ipynb  assignment.py  notes.ipynb  notes.py
topic07-unsupervised-pca-clustering/: assignment.ipynb  assignment.py  notes.ipynb  notes.py
(+14 files in other folders)
