[project]
name = "mlcourse-ai-workbook"
version = "0.1.0"
description = "workbook for https://mlcourse.ai: a free, open, and self-paced Machine Learning course by OpenDataScience that strikes the perfect balance between theory and practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "mlxtend>=0.25.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "plotly>=6.9.0",
    "prophet>=1.3.0",
    "pydotplus>=2.0.2",
    "pytesseract>=0.3.13",
    "requests>=2.34.2",
    "reverse-geocoder>=1.5.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.68.4",
    "user-agents>=2.2.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "marimo>=0.23.14",
    "ruff>=0.15.21",
]
